--- a/web_dynamic/templates/history.html
+++ b/web_dynamic/templates/history.html
@@ -121,7 +121,7 @@
     </header><br>
 
     <main class="container mt-5">
-      <table class="table table-borderless table-striped">
+      <table class="col-6 table table-borderless table-striped">
         <thead>
           <tr class="text-center">
             <th scope="col">Mission</th>
