--- a/web_dynamic/templates/main.html
+++ b/web_dynamic/templates/main.html
@@ -36,7 +36,7 @@
           <div class="container-fluid">
               <ul class="navbar-nav p-0">
                 <li class="nav-item transparent">
-                  <a class="nav-link text-dark" href="/">MyTaskMate</a>
+                  <a class="nav-link text-dark" href="https://z-sitawi.github.io/">MyTaskMate</a>
                 </li>
                 <li class="nav-item transparent">
                   <a class="nav-link text-dark" href="#abus">About Us</a>
